--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/parallax": "^9.7.4",
+    "aos": "^2.3.4",
+    "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "react-parallax": "^3.5.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "routes": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "repository": {
