--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.26.2",
